[gd_scene load_steps=2 format=3 uid="uid://ce8ny72m68kl8"]

[ext_resource type="Script" path="res://Scripts/LevelPackSelectButton.gd" id="1_q5ivh"]

[node name="LevelPackSelectButton" type="Button"]
custom_minimum_size = Vector2(192, 192)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
script = ExtResource("1_q5ivh")

[node name="PackNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 4.0
offset_right = -12.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Campaign Pack #1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -32.0
offset_right = -8.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="CompletionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -23.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Complete:"
vertical_alignment = 2

[node name="CompletionNumberLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -27.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "50 / 50"
horizontal_alignment = 2
vertical_alignment = 2
